Add /api/v1/apps endpoint
